Search results on maps.google.com displayed incorrectly: no space between some texts https://bugs.webkit.org/show_bug.cgi?id=300643

Reviewed by Antti Koivisto.

Let's opt out of this renderer optimization (not constructing a RenderText) when the
existing tree structure mismatches the insertion point context (e.g. due to anon blocks).

Test: fast/text/missing-whitespace.html

* LayoutTests/fast/events/mouseover-mouseout-expected.txt:
* LayoutTests/fast/forms/ios/show-file-upload-context-menu-above-keyboard-expected.txt:
* LayoutTests/fast/text/missing-whitespace-expected.html: Added.
* LayoutTests/fast/text/missing-whitespace.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-multicol/going-out-of-flow-after-spanner-expected.txt:
* LayoutTests/interaction-region/consolidated-nested-regions-expected.txt:
* LayoutTests/platform/ios/css1/box_properties/clear-expected.txt:
* LayoutTests/platform/ios/css2.1/20110323/block-non-replaced-width-001-expected.txt:
* LayoutTests/platform/ios/fast/block/basic/adding-near-anonymous-block-expected.txt:
* LayoutTests/platform/ios/fast/forms/input-align-image-expected.txt:
* LayoutTests/platform/ios/fast/line-grid/line-align-left-edges-expected.txt:
* LayoutTests/platform/ios/fast/line-grid/line-align-right-edges-expected.txt:
* LayoutTests/platform/ios/fast/multicol/client-rects-spanners-complex-expected.txt:
* LayoutTests/platform/ios/fast/multicol/client-rects-spanners-expected.txt:
* LayoutTests/platform/mac/css1/box_properties/clear-expected.txt:
* LayoutTests/platform/mac/css2.1/20110323/block-non-replaced-width-001-expected.txt:
* LayoutTests/platform/mac/fast/block/basic/adding-near-anonymous-block-expected.txt:
* LayoutTests/platform/mac/fast/forms/input-align-image-expected.txt:
* LayoutTests/platform/mac/fast/line-grid/line-align-left-edges-expected.txt:
* LayoutTests/platform/mac/fast/line-grid/line-align-right-edges-expected.txt:
* LayoutTests/platform/mac/fast/multicol/client-rects-spanners-complex-expected.txt:
* LayoutTests/platform/mac/fast/multicol/client-rects-spanners-expected.txt:
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::textRendererIsNeeded):

Canonical link: https://commits.webkit.org/301983@main